tests/paczka1/fuzzy1/30494615.err
Error in line 3: IBgIzWzFiae S565 76,5
Error in line 8: rX3 A449 40,7
Error in line 6: 66bT A449 8,5
Error in line 21: sff9pL8j S565 10,9
Error in line 36: A812 A449 6,9
